--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
       </div>
       <div class="skill-item">
-        <p>DELPHİNE</p>
+        <p>DELPHİNE 7</p>
         <div class="progress-bar">
             <div class="progress" style="width: 5%;"></div>
         </div>
