--- a/iletisim.html
+++ b/iletisim.html
@@ -46,13 +46,12 @@ footer {
 </head>
 <body>
     <!-- NAVBAR BASLANGIC -->
-    <div class="navbar">
-        <a href="index.html">ANA SAYFA</a>
-        <a href="#">HAKKIMDA </a>
-        <a href="iletisim.html">İLETİSİM</a>
-        <a href="sertifika.html">SERTİFİKALAR</a>
-    </div>
-
+     <div class="navbar">
+      <a href="index.html">ANA SAYFA</a>
+      <a href="hakkimda.html">HAKKIMDA </a>
+      <a href="iletisim.html">İLETİSİM</a>
+      <a href="sertifika.html">SERTİFİKALAR</a>
+  </div>
   
     <!-- NAVBAR BITIS -->
 
