--- a/sertifika.html
+++ b/sertifika.html
@@ -81,13 +81,12 @@ footer {
 <body>
         <!-- NAVBAR BASLANGIC -->
 
-        <div class="navbar">
-            <a href="index.html">ANA SAYFA</a>
-            <a href="#">HAKKIMDA </a>
-            <a href="iletisim.html">İLETİSİM</a>
-            <a href="sertifika.html">SERTİFİKALAR</a>
-        </div>
-      
+     <div class="navbar">
+      <a href="index.html">ANA SAYFA</a>
+      <a href="hakkimda.html">HAKKIMDA </a>
+      <a href="iletisim.html">İLETİSİM</a>
+      <a href="sertifika.html">SERTİFİKALAR</a>
+  </div>
       
         <!-- NAVBAR BITIS -->
     <header>
